--- a/App-motivation/vercel.json
+++ b/App-motivation/vercel.json
@@ -1,11 +1,12 @@
-{
+  
+  {
     "version": 2,
     "builds": [
       {
-        "src": "src/index.js",
+        "src": "index.html",
         "use": "@vercel/static-build",
         "config": {
-          "distDir": "build"
+          "distDir": "dist"
         }
       }
     ],
